--- a/server/conf/apitodolist.conf
+++ b/server/conf/apitodolist.conf
@@ -1,33 +1,31 @@
+upstream docker-web-api {
+    server api-todolist:8181;
+}
 server {
-      listen 8002;
-      server_name apitodolist.local;
-      gzip off;
-      proxy_max_temp_file_size 0;
-      etag on;
+  listen 8181;
+    server_name api.todolist.local;
 
-      location / {
-        root /var/www/html;
-        index index.html index.php;
-        try_files $uri $uri/ /index.php;
-        add_header 'Access-Control-Allow-Origin' 'api.todolist.local';
-        add_header 'Access-Control-Allow-Credentials' 'true';
-        add_header 'Access-Control-Allow-Headers' 'Authorization,Accept,Origin,DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Content-Range,Range';
-        add_header 'Access-Control-Allow-Methods' 'GET,POST,OPTIONS,PUT,DELETE,PATCH';
-      
-        if ($request_method = 'OPTIONS') {
-          add_header 'Access-Control-Allow-Origin' 'api.todolist.local';
-          add_header 'Access-Control-Allow-Credentials' 'true';
-          add_header 'Access-Control-Allow-Headers' 'Authorization,Accept,Origin,DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Content-Range,Range';
-          add_header 'Access-Control-Allow-Methods' 'GET,POST,OPTIONS,PUT,DELETE,PATCH';
-          add_header 'Access-Control-Max-Age' 1728000;
-          add_header 'Content-Type' 'text/plain charset=UTF-8';
-          add_header 'Content-Length' 0;
-          return 204;
-        }
-      }
+    root /var/www/html;
 
-      error_page 500 502 503 504 /50x.html;
-      location = /50x.html {
-        root /usr/share/nginx/html;
-      }
+    index index.html index.htm index.php;
+
+    location / {
+        try_files $uri $uri/ /index.php?$query_string;
+    }
+
+    location ~ \.php$ {
+        proxy_pass http://docker-web-api;
+        proxy_set_header   Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        include fastcgi_params;
+        try_files $fastcgi_script_name = 404;
+        fastcgi_pass api-todolist:9000;
+        fastcgi_index index.php;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    }
+
+     
     }
