feat: finish api todolist

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,7 +1,7 @@
 FROM php:8.0.5
-RUN apt-get update -y && apt-get install -y openssl zip unzip git
+RUN apt-get update -y && apt-get install -y openssl zip unzip git libpq-dev postgresql postgresql-client
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
-RUN docker-php-ext-install pdo
+RUN docker-php-ext-install pdo pdo_pgsql
 WORKDIR /app
 COPY ./composer*.json ./
 COPY . ./
